--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,14 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+   			<groupId>com.fasterxml.jackson.core</groupId>
+   			<artifactId>jackson-databind</artifactId>
+   			<version>2.9.4</version>
+   		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
