--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,23 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.9.3</version>
 		</dependency>
+		
+		<!-- 200922s -->
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.3</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+		    <groupId>net.coobird</groupId>
+		    <artifactId>thumbnailator</artifactId>
+		    <version>0.4.8</version>
+		</dependency>
+		<!-- 200922e -->
+
 	</dependencies>
 	
 	<build>
