--- a/pom.xml
+++ b/pom.xml
@@ -176,11 +176,11 @@
 		
 		<!-- 200922s -->
 		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>commons-fileupload</groupId>
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.3.3</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
 		<dependency>
@@ -189,6 +189,22 @@
 		    <version>0.4.8</version>
 		</dependency>
 		<!-- 200922e -->
+		
+		
+		<!-- 첨부파일 START-->
+		<!-- MultipartHttpServletRequset -->
+		 <dependency>
+			 <groupId>commons-io</groupId>
+			 <artifactId>commons-io</artifactId>
+			 <version>2.0.1</version>
+		 </dependency>
+		 
+		 <dependency>
+			 <groupId>commons-fileupload</groupId>
+			 <artifactId>commons-fileupload</artifactId>
+			 <version>1.2.2</version>
+		 </dependency>
+		<!-- 첨부파일 END -->
 
 	</dependencies>
 	
